--- a/_posts/2022-12-09-crto.md
+++ b/_posts/2022-12-09-crto.md
@@ -6,14 +6,6 @@ categories: Blog
 ---
 
 
-Here is my first post on my Pen Testing Cyber Security journey. 
-Just to provide some background I've worked in the ICS world about 15 years ago as a PLC programmer for 2 years so whilst Pen Testing it would be great to spend some time testing ICS Cyber Security also.
+Here is my 2nd post on my Pen Testing Cyber Security journey. 
 
-Whilst in that role I programmed Allen Bradley systems using RS Logix to control a fuel pipeline into a major UK airport. 
-
-After 15 years in Investment Banking I've now started studying for the [OSCP](https://en.m.wikipedia.org/wiki/Offensive_Security_Certified_Professional) to improve my Cyber Security skills. 
-
-This blog to begin with will just contain anything I find online that is of interest in this domain and hopefully eventually contain stories of my pen testing escapades. 
-
-Happy to have you onboard!
 
