--- a/_posts/2022-12-09-sektor7-ess.md
+++ b/_posts/2022-12-09-sektor7-ess.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Sektor7 Malware Development Course Review"
+title: "Sektor7 Malware Development Essentials Review"
 date: 09-12-2022
 categories: Blog
 ---
