--- a/_posts/2022-12-09-oscp.md
+++ b/_posts/2022-12-09-oscp.md
@@ -17,10 +17,10 @@ I have 15 years in Investment Banking IT but none of it was Cyber Security relat
 
 I started preparing at the beginning of the year. I started off by doing the following paths on THM although I only partially did the Jr one to fill in any gaps from the previous 3:
 
-Complete Beginner
-Offensive Pentesting
-Web Fundamentals
-Jr Penetration Tester
+* Complete Beginner
+* Web Fundamentals
+* Offensive Pentesting
+* Jr Penetration Tester
 
 After that I started working through TJ Null’s list on PG Practice/Play which is a great resource and I completed them all. I did all of the above over 6 months whilst working full time then I took a career break for 6 months to focus on the PWK itself. Obviously, everyone wouldn’t have this luxury but I had a bit of savings to allow me to do it.
 
