--- a/_posts/2022-12-09-crto.md
+++ b/_posts/2022-12-09-crto.md
@@ -6,6 +6,6 @@ categories: Blog
 ---
 
 
-Here is my 2nd post on my Pen Testing Cyber Security journey. 
+This will contain a review as soon as I get a chance to publish it. 
 
 
