--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Certified Red Team Professional (CRTP) Review"
-date: 09-12-2022
+date: 14-12-2022
 categories: Blog
 ---
 
-Here is my first post on my Pen Testing Cyber Security journey. 
+This will contain a review as soon as I get a chance to publish it. 
