--- a/_posts/2022-12-09-sektor7-ess.md
+++ b/_posts/2022-12-09-sektor7-ess.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: "Sektor7 Malware Development Essentials Review"
-date: 09-12-2022
+date: 25-11-2022
 categories: Blog
 ---
 
 
-Here is my 2nd post on my Pen Testing Cyber Security journey. 
+This will contain a review as soon as I get a chance to publish it. 
 
 
