--- a/_posts/2022-12-09-oscp.md
+++ b/_posts/2022-12-09-oscp.md
@@ -5,7 +5,7 @@ date: 09-12-2022
 categories: Blog
 ---
 
-This was first posted on Reddit <a href="https://www.reddit.com/r/oscp/comments/ysexn7/passed_with_90_points_incl_report">here.</a>
+This was originally posted on Reddit <a href="https://www.reddit.com/r/oscp/comments/ysexn7/passed_with_90_points_incl_report">here.</a>
 
 I passed the OSCP 6 weeks ago and wanted to provide the obligatory Reddit post explaining how I went about it and more importantly I wanted to wait to test out the value of the certificate itself in the jobs market. I would also like to say that this is all anecdotal and just my experience so any advice or recommendations may not work for everyone so take from this the bits you think might be useful.
 
