--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Certified Red Team Professional (CRTP) Review"
+permalink: "crtp"
 date: 14-12-2022
 categories: Blog
 ---
