--- a/_posts/2022-12-09-oscp.md
+++ b/_posts/2022-12-09-oscp.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Offensive Security Certified Professional (OSCP) Review"
+permalink: "oscp"
 date: 10-11-2022
 categories: Blog
 ---
