--- a/_posts/2022-12-09-sektor7-ess.md
+++ b/_posts/2022-12-09-sektor7-ess.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Sektor7 Malware Development Essentials Review"
+permalink: "sektor7-ess"
 date: 25-11-2022
 categories: Blog
 ---
