--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -2,8 +2,9 @@
 layout: post
 title: "Certified Red Team Professional (CRTP) Review"
 permalink: "crtp"
-date: 14-12-2022
+date: 09-12-2022
 categories: Blog
 ---
 
-This will contain a review as soon as I get a chance to publish it. 
+
+This will contain a review as soon as I get a chance to publish it...
