--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -6,7 +6,7 @@ date: 13-11-2022
 categories: Blog
 ---
 
-Recently I passed the Certified Red Team Professional (CRTP) which was an excellent course provided by Pentester Academy. The course is all focused on Active Directory hacking but instead of using Kali we instead use a Windows box to priv esc and move around the AD network with the help of PS Remoting mainly. 
+Recently I passed the Certified Red Team Professional (CRTP) which was an excellent course provided by Pentester Academy. The course is focused on Active Directory hacking but instead of using Kali we instead use a Windows box to priv esc and move around the AD network with the help of PS Remoting mainly. 
 
 The best part about this course is we are working in an environment with MS Defender and AMSI scanning in place so although being stealthy (aka Red Teaming) isn't a requirement it is necessary to bypass these restrictions.
 
