--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -29,7 +29,7 @@ Throughout the enumeration section you have the choice to use the [ActiverDirect
 
 PowerView contains some useful features such as Invoke-UserHunter which can find computers where specified users or groups have a current session as well as Find-LocalAdminAccess whereby it searches the domain looking for machines that the current user has local admin access to.
 
-The other tool that stands out is the one named [PowerUpSQl](https://github.com/NetSPI/PowerUpSQL) which scans the domain looking for SQL servers that may be accessible. The first command I would run would be this to provide general enumeration of the SQL Servers:
+The other tool that stands out is the one named [PowerUpSQL](https://github.com/NetSPI/PowerUpSQL) which scans the domain looking for SQL servers that may be accessible. The first command I would run would be this to provide general enumeration of the SQL Servers:
 
 {% highlight powershell %}
 Get-SQLInstanceDomain | Get-SQLServerInfo -Verbose
