--- a/_posts/2022-12-09-crtp.md
+++ b/_posts/2022-12-09-crtp.md
@@ -85,7 +85,9 @@ The course also delves into lots of other tips and tricks such as Golden\Silver 
 
 ### Exam
 
+I started the exam at 10am and began making my way through the machines on the network and had cracked them all by midnight. I won't give away too much to avoid spoilers but I think I may have underestimated how difficult it was going to be and there were sections like going from machine 3 to 4 which were particularly tricky for me conceptually to perform. 
 
+I do think overall the exam was fair and if you know the course well you should pass it without problems. By well I mean if a command was only shown once in the course just remember that it exists and don't overlook the minor things.
 
 
 
