--- a/_posts/2022-12-09-crto.md
+++ b/_posts/2022-12-09-crto.md
@@ -7,7 +7,7 @@ categories: Blog
 ---
 
 Recently I worked on attaining the CRTO so I thought I would just share my experiences on the course and the exam.
-For those of you who may not be familiar with it the course is run by RastaMouse aka Daniel Duggan of Zero-Point Security based in the UK.
+For those of you who may not be familiar with it, the course is run by RastaMouse aka Daniel Duggan of Zero-Point Security based in the UK.
 
 The course is named 'Red Team Ops' and you get certified as a 'Red Team Operator' following its succesful completion. The aim of the course is to provide an introduction to how Red Teams operate using the command and control (C2) framework named 'Cobalt Strike'. Cobalt Strike (CS) is a very expensive C2 to use personally so getting the chance to use it is a rarity unless you are currently performing a red team role.
 
@@ -40,17 +40,21 @@ The course is made up of the following sections:
 - Data Hunting & Exfiltration
 - Extending Cobalt Strike
 
-If you have already attended the other excellent course by Pentester Academy called 'Attacking and Defending Active Directory' a lot of these topics will look familiar although performing these same techniques via CS is a whole different ball game. I would recommend attending the Pentester Academy course first if you do intend on doing both courses as it provides a solid grouding in Active Directory before using CS.
+If you have already attended the other excellent course by Pentester Academy called 'Attacking and Defending Active Directory' a lot of these topics will look familiar although performing these same techniques via CS is a whole different ball game. I would recommend attending the Pentester Academy course first if you do intend on doing both courses as it provides a solid grounding in Active Directory before using CS.
 
-The labs are performed entirely from your browser to avoid people taking Cobalt Strike onto their own machine which is understandable but I didn't find any issues with following the labs via Chrome and everything worked fine for me.
+The labs are performed entirely from your browser to avoid people taking Cobalt Strike onto their own machine which is understandable. I didn't find any issues working through the labs via Chrome and everything worked fine for me.
 
-I found the techniques were well explained by Rasta and when there was a tricky topic he also provides a useful video of himself performing the technique so you can follow along. Maybe one thing that may have helped at times is at the beginning of each chapter to let us know what user and what machine we are currently meant to be operating from because at times after a weeks break it's hard to know this at times. I see in some screenshots he displays 'getuid' and 'hostname' to show the info but it isn't throughout the course but that is only a minor point to be honest.
+I also found the techniques were well explained by Rasta and when there was a tricky topic he also provides a useful video of himself performing the technique so you can follow along. Maybe one thing that may have helped at times is at the beginning of each chapter to let us know what user and what machine we are currently meant to be operating from because at times after a weeks break it's hard to know this at times. I see in some screenshots he displays 'getuid' and 'hostname' to show the info but it isn't throughout the course but that is only a minor point to be honest.
 
-One of the sections I particularly enjoyed in the 'Application Whitelisting' section was a subsection named 'Living Off The Land Binaries, Scripts and Libraries' which is known colloquially as LOLBA. These are executables and scripts that come as part of Windows but allow for code execution. Because they can be Microsoft owned they allow us to bypass AppLocker since they're allowed to execute under the normal allow criteria. In this section we learned how to use MSBuild to provide a reverse shell back to our Cobalt Strike teamserver bypassing Windows restrictions.
+One of the sections I particularly enjoyed in the 'Application Whitelisting' section was a subsection named 'Living Off The Land Binaries, Scripts and Libraries' which is known colloquially as LOLBAS. These are executables and scripts that come as part of Windows but allow for code execution. Because they can be Microsoft owned they allow us to bypass AppLocker since they're allowed to execute under the normal allow criteria. 
 
-Another big part of the course is being able to move laterally from one machine to the next whilst avoiding AV detection. This is achieved by using the CS artifact and resource kits to help us mask the executeables that for example 'psexec' drops onto a server before executing it therefore allowing us to login. As we hop from one machine to the next we build up chains of access across the network as pictured below.
+In this section we learned how to use MSBuild to provide a reverse shell back to our Cobalt Strike teamserver bypassing Windows restrictions which is really useful to know and these binaries I will definitely explore further in my career.
 
-After spendign about 60 hours of lab time I felt I was in good shape to take the exam. You can easily by extended lab time priced at £20 for 40 hours which is very reasonable.
+Another big part of the course is being able to move laterally from one machine to the next whilst avoiding AV detection. This is achieved by using the CS artifact and resource kits to help us mask the executeables that for example 'psexec' drops onto a server before executing it therefore allowing us to login. As we hop from one machine to the next we build up chains of access across the network as pictured below which is pretty neat in my opinion.
+
+<img alt="cs" src="/assets/img/CS.png"/>
+
+After spending about 60 hours of lab time I felt I was in good shape to take the exam. You can easily by extended lab time priced at £20 for 40 hours which is very reasonable.
 
 ### Exam
 
