--- a/_posts/2022-12-09-crto.md
+++ b/_posts/2022-12-09-crto.md
@@ -52,9 +52,9 @@ In this section we learned how to use MSBuild to provide a reverse shell back to
 
 Another big part of the course is being able to move laterally from one machine to the next whilst avoiding AV detection. This is achieved by using the CS artifact and resource kits to help us mask the executeables that for example 'psexec' drops onto a server before executing it therefore allowing us to login. As we hop from one machine to the next we build up chains of access across the network as pictured below which is pretty neat in my opinion.
 
-<img alt="cs" src="/assets/img/CS.png"/>
+<img alt="cs" src="/assets/img/cs.PNG"/>
 
-After spending about 60 hours of lab time I felt I was in good shape to take the exam. You can easily by extended lab time priced at £20 for 40 hours which is very reasonable.
+After spending about 60 hours of lab time I felt I was in good shape to take the exam. You can easily buy extended lab time priced at £20 for 40 hours which is very reasonable.
 
 ### Exam
 
