--- a/_posts/2022-12-09-adcs.md
+++ b/_posts/2022-12-09-adcs.md
@@ -31,7 +31,7 @@ They classified each attack vector with the prefix ESC of which there are 8 in t
 
 “AD CS is widely deployed, and provides attackers opportunities for credential theft, machine persistence, domain escalation, and subtle domain persistence.”
 
-For this blog post, I will focus on ESC8 which we at Evalian had some recent success in exploiting which led to a complete Domain takeover.
+For this blog post, I will focus on ESC8 which I had some recent success in exploiting which led to a complete Domain takeover.
 
 ### ESC8 Abuse
 
@@ -40,7 +40,7 @@ ESC8 can be abused because some enrolment HTTP endpoints do not have HTTPS enabl
 <img alt="cs" src="/assets/img/WebEnrol.jpg"/>
 
 
-This opens up an avenue of attack for a threat actor (in this case an Evalian pen tester) to exploit. A full abuse sequence of ESC8 is pictured below. Keep in mind the Certificate Authority on the right contains the webpage pictured above that we want to relay the ‘Target’ authentication to, but it won’t verify it is actually the Target doing so.
+This opens up an avenue of attack for a threat actor (in this case me) to exploit. A full abuse sequence of ESC8 is pictured below. Keep in mind the Certificate Authority on the right contains the webpage pictured above that we want to relay the ‘Target’ authentication to, but it won’t verify it is actually the Target doing so.
 
 <img alt="cs" src="/assets/img/ESC8Sequence.jpg"/>
 
@@ -49,17 +49,17 @@ This opens up an avenue of attack for a threat actor (in this case an Evalian pe
 
 The sequence of attack is as follows:
 
-- The Attacker (Evalian using Kali Linux in our case) uses a bug known as ‘PetitPotam’ which makes an RPC call to our Target, which in our case was the Domain Controller, which tricks the Target to authenticate back to our Attacker machine.
+- The Attacker (Kali Linux in our case) uses a bug known as ‘PetitPotam’ which makes an RPC call to our Target, which in our case was the Domain Controller, which tricks the Target to authenticate back to our Attacker machine.
 - Our Attacker machine then receives the Target authentication and instead of storing it immediately passes it on to the vulnerable website at the Certificate Authority.
 - The Certificate Authority then thinks that we are the Target and responds to us as if we are the Target.
 - The response, in this case, is that the CA sends a valid Certificate intended for the Target, but instead to us.
 - We then take the Target certificate and convert it to a TGT, which is essentially like a machine’s credentials. Now that we have the Target’s TGT, we have now become for all intents and purposes (or at least authentication-based ones!) the Target machine. Given the Target is a Domain Controller, which is the most powerful machine on the network, we can run from our Kali machine the DC Sync process which Domain Controllers run to keep in sync with other Domain Controllers. This sync process provides us with every username/password hash in the whole domain so we can log in as the Administrator.
 
-At this point, we can add our Evalian user to the ‘Domain Admins’ as an ‘Indication of Compromise’ (IOC).
+At this point, we can add our test user to the ‘Domain Admins’ as an ‘Indication of Compromise’ (IOC).
 
 <img alt="cs" src="/assets/img/DA.jpg"/>
 
-As we see daily, the next step for groups who use Ransomware would be to encrypt all of the data on the domain so we can see how dangerous this type of attack can become.
+As I see daily, the next step for groups who use Ransomware would be to encrypt all of the data on the domain so we can see how dangerous this type of attack can become.
 
 ### Remediation
 
