--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -43,7 +43,7 @@ To run them is very easy:
 <img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="600"/>
 
 
-# GROUP-MEM Results
+### GROUP-MEM Results
 
 Here are some examples of the output from the GROUP-MEM module shown below:
 
@@ -62,7 +62,7 @@ Here you can also easily verify if any **RBCD** machines such as the EVILPC show
 <img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/DCDA.jpg"/>
 
 
-# COMP-DESC Results
+### COMP-DESC Results
 
 Here are some examples of the output from the COMP-DESC module shown below:
 
