--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -26,21 +26,28 @@ To run them is very easy:
 
 **GROUP-MEM Module: Returning Domain Admins**
 
-`crackmapexec ldap $DC-IP -u Username -p Password -M GROUP-MEM -o GROUP="domain admins"`
+{% highlight powershell %}
+crackmapexec ldap $DC-IP -u Username -p Password -M GROUP-MEM -o GROUP="domain admins"
+{% endhighlight %}
 
 **GROUP-MEM Module:  Returning Domain Controllers**
 
-`crackmapexec ldap $DC-IP -u Username -p Password -M GROUP-MEM -o GROUP="domain controllers"`
+{% highlight powershell %}
+crackmapexec ldap $DC-IP -u Username -p Password -M GROUP-MEM -o GROUP="domain controllers"
+{% endhighlight %}
 
 **COMP-DESC Module: Returning Computers with 'server' in their description**
 
-`crackmapexec ldap $DC-IP -u Username -p Password -M COMP-DESC -o DESC="server"`
+{% highlight powershell %}
+crackmapexec ldap $DC-IP -u Username -p Password -M COMP-DESC -o DESC="server"
+{% endhighlight %}
+
 
 **Their usage is also visible via the command line**
 
-<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/GROUP-MEM-OPTIONS.jpg" width="600"/>
+<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/GROUP-MEM-OPTIONS.jpg" width="300"/>
 
-<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="600"/>
+<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="300"/>
 
 
 ### GROUP-MEM Results
