--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -54,7 +54,7 @@ crackmapexec ldap $DC-IP -u Username -p Password -M COMP-DESC -o DESC="server"
 
 Here are some examples of the output from the GROUP-MEM module shown below:
 
-**Returning Domain Computers**
+<ins>**Returning Domain Computers**</ins>
 
 This example illustrates specifying an incorrect group name 'Computers' and the subsequent error handling in place to manage this.
 
@@ -64,7 +64,7 @@ Here you can also easily verify if any **RBCD** machines such as the EVILPC show
 
 <img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMPUTERS.jpg"/>
 
-**Returning Domain Controllers and Domain Admins**
+<ins>**Returning Domain Controllers and Domain Admins**</ins>
 
 <img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/DCDA.jpg"/>
 
@@ -73,14 +73,14 @@ Here you can also easily verify if any **RBCD** machines such as the EVILPC show
 
 Here are some examples of the output from the COMP-DESC module shown below:
 
-**Returning Servers matching the supplied description**
+<ins>**Returning Servers matching the supplied description**</ins>
 
 This example displays 2 scenarios, returning a 'Computer' object described with the word 'server' and also with the text '10'.
 If the IP can be retrieved it will also do so.
 
 <img alt="da" src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC.jpg"/>
 
-**Returning a failed server lookup which illustrates its error handling**
+<ins>**Returning a failed server lookup which illustrates its error handling**</ins>
 
 This example shows a scenario of a 'Computer' object described with the word 'z' which is unable to be found.
 
