--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -6,7 +6,7 @@ date: 16-05-2023
 categories: Blog
 ---
 
-Update: The modules are now being put forward as a [pull request](https://github.com/Porchetta-Industries/CrackMapExec/pull/785) to go-live on CME.
+**Update:** The modules are now being put forward as a [pull request](https://github.com/Porchetta-Industries/CrackMapExec/pull/785) to go-live on CME.
 
 Recently I have been dabbling in some CrackMapExec(CME) module development so thought it would be good to create a post on it. For those of you who have never heard of this tool, which would probably be a rarity in the Cyber Security world, it is aptly described as: 'A swiss army knife for pentesting networks'.
 
