--- a/_posts/2022-12-09-cme.md
+++ b/_posts/2022-12-09-cme.md
@@ -10,11 +10,11 @@ categories: Blog
 
 Recently I have been dabbling in some CrackMapExec(CME) module development so thought it would be good to create a post on it. For those of you who have never heard of this tool, which would probably be a rarity in the Cyber Security world, it is aptly described as: 'A swiss army knife for pentesting networks'.
 
-It is one of the goto tools for any internal pen tests and comes with many user generated modules. These range from basic checking to see if LDAP signing is enabled, to advanced things like running Mimikatz remotely, so it covers a lot of bases.
+It is one of the goto tools for any internal pen tests and comes with many user generated modules. These range from basic checks like if LDAP signing is enabled, to advanced things like running Mimikatz remotely, so it covers a lot of bases.
 
-During some recent pentests I have been wanting to impersonate 'Domain Admins' at times and I wanted to be able to quickly look up who they were. So rather than go to the trouble of starting up BloodHound or crafting a LDAP search filter I thought wouldn't it be great if CME could do it.
+During some recent pentests I have been wanting to impersonate 'Domain Admins' at times and I wanted to be able to quickly look up who they were. So rather than go to the trouble of starting up BloodHound, running ldapdomaindump or crafting a LDAP search filter I thought "wouldn't it be great if CME could do it".
 
-It has modules for returning the users and groups but not for informing us of what users belong to what groups. This is where the idea for the module named GROUP-MEM came about which is just shorthand for 'group membership'.
+It has modules for returning the users and groups, but not for informing us of what users belong to what groups. This is where the idea for the module named GROUP-MEM came about which is just shorthand for 'group membership'.
 
 The thinking around my second module was that at times I like to be able to figure out what are the names and IPs of the servers in the domain. Sometimes we aren't interested in seeing a list of tens of Windows 10 workstations that CME may return, but just a limited subset for us to plan our attack around.
 
@@ -45,9 +45,9 @@ crackmapexec ldap $DC-IP -u Username -p Password -M COMP-DESC -o DESC="server"
 
 **Their usage is also visible via the command line**
 
-<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/GROUP-MEM-OPTIONS.jpg" width="300"/>
+<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/GROUP-MEM-OPTIONS.jpg" width="200"/>
 
-<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="300"/>
+<img src="https://raw.githubusercontent.com/Cyb3rC3lt/CrackMapExec-Modules/main/images/COMP-DESC-OPTIONS.jpg" width="200"/>
 
 
 ### GROUP-MEM Results
